fixed: gallery card view on mobile

--- a/src/scss/components/jeans/_main-gallery.scss
+++ b/src/scss/components/jeans/_main-gallery.scss
@@ -134,6 +134,7 @@
 
     .gallery-left {
       margin: 0;
+      width: 100%;
 
       & span {
         padding: 8px 10px;
